# WantEat

./: README.md
Vue_frontend/: README.md  package-lock.json  package.json
Vue_frontend/src/: App.vue
Vue_frontend/src/components/Navbar/: Navbar.vue
Vue_frontend/src/router/: index.js
Vue_frontend/src/stores/: auth.js
Vue_frontend/src/views/: Home.vue
Vue_frontend/src/views/accounts/: login.vue  register.vue
django backend/: pyproject.toml
django backend/core/: settings.py
django_backend/: Makefile  pyproject.toml
django_backend/core/: settings.py  urls.py
django_backend/users/: urls.py  views.py
