[tool.poetry]
name = "django_backend"
version = "0.1.0"
description = ""
authors = ["minirov1208 <a0939897580@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
mysql = "^0.0.3"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
